--- a/Framework Project/ColorsTests/Info.plist
+++ b/Framework Project/ColorsTests/Info.plist
@@ -7,9 +7,11 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>mattzanchelli.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.mattzanchelli.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	<key>CFBundleName</key>
+	<string>${PRODUCT_NAME}</string>
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
